Attempts at progress. Still getting the invalid Scala instance error.