@@ -9,11 +9,11 @@ RUN useradd -ms /bin/bash lichess \
 # Run as a non-privileged user.
 USER lichess
 
-ENV PATH="/home/lichess/.cargo/bin:/home/lichess/.node/bin:/home/lichess/.yarn/bin:${PATH}"
-
 ADD build /home/lichess/build
 
-RUN echo 'debconf debconf/frontend select Noninteractive' | sudo debconf-set-selections \
+RUN export PATH="/home/lichess/.cargo/bin:/home/lichess/.node/bin:/home/lichess/.node/lib/node_modules/bin:/home/lichess/.yarn/bin:$PATH" \
+    && echo 'debconf debconf/frontend select Noninteractive' | \
+        sudo debconf-set-selections \
     # Add custom sources for MongoDB and Scala.
     && sudo apt-get install -y ca-certificates gnupg2 \
     && sudo apt-key add /home/lichess/build/signatures/mongodb-org.asc \
@@ -32,7 +32,6 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | sudo debconf-set-sel
         npm \
         parallel \
         sbt \
-        scala \
         wget \
     # Set locale.
     && sudo locale-gen en_US.UTF-8 \
@@ -41,7 +40,9 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | sudo debconf-set-sel
     && touch /home/lichess/.parallel/will-cite \
     # Update node.
     && echo 'prefix = /home/lichess/.node' >> /home/lichess/.npmrc \
-    && npm install -g yarn \
+    && npm install -g n yarn \
+    && N_PREFIX=/home/lichess/.node/lib/node_modules n 10.16.3 \
+    && sudo rm /usr/bin/node \
     && yarn global add gulp-cli --prefix /home/lichess/.yarn \
     # Install svgcleaner via the Rust package manager, Cargo.
     && /home/lichess/build/rustup-init.sh -y \
@@ -51,7 +52,6 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | sudo debconf-set-sel
     # Create the MongoDB database directory.
     && sudo mkdir /data \
     && sudo mkdir /data/db \
-    && JAVA_OPTS="-Xms2048M -Xmx2560M -XX:ReservedCodeCacheSize=128m -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:+ExitOnOutOfMemoryError -Dkamon.auto-start=true" sbt update \
     # Remove now unneeded dependencies.
     && sudo apt-get purge -y \
         git-all \
@@ -60,7 +60,7 @@ RUN echo 'debconf debconf/frontend select Noninteractive' | sudo debconf-set-sel
     && sudo apt-get autoremove -y \
     && sudo apt-get clean \
     && rustup self uninstall -y \
-    && rm -rf /home/lichess/build
+    && sudo rm -rf /home/lichess/build
 
 ADD run.sh /home/lichess/run.sh
 ADD nginx.conf /etc/nginx/nginx.conf
@@ -68,6 +68,8 @@ ADD nginx.conf /etc/nginx/nginx.conf
 # Use UTF-8 encoding.
 ENV LANG "en_US.UTF-8"
 ENV LC_CTYPE "en_US.UTF-8"
+
+ENV PATH "/home/lichess/.node/bin:/home/lichess/.node/lib/node_modules/bin:/home/lichess/.yarn/bin:${PATH}"
 
 EXPOSE 80
 
